--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                      <a class="navigation__link" href="#">offer</a>
                 </li>
 
-                <li class="navigation__item">
+                <li class="navigation__item navigation__item-img">
                      <a class="navigation__link" href="#">
                      <img class="navigation__image" src="img/logo.png" alt="logo"></a>
                 </li>
